removing empty folder

--- a/rethinker.conf
+++ b/rethinker.conf
@@ -1,13 +1,16 @@
-
-input {
-rethinker
-   {
+input { 
+  rethinker {
     host => "localhost"
     port => 28015
     auth_key => ""
     watch_dbs => ["dolly"]
     watch_tables => ["dolly.customers", "dolly.orders"]
     backfill => true
-   }
+  }
 }
-output { stdout {codec => json_lines} }
+
+output { 
+  stdout { 
+    codec => json_lines 
+  } 
+}
