working with logstash 5.x

--- a/rethinker.conf
+++ b/rethinker.conf
@@ -1,10 +1,10 @@
 input { 
   rethinker {
-    host => "localhost"
+    host => 'localhost'
     port => 28015
-    auth_key => ""
-    watch_dbs => ["dolly"]
-    watch_tables => ["dolly.customers", "dolly.orders"]
+    auth_key => ''
+    watch_dbs => ['test']
+    watch_tables => ['test.countries']
     backfill => true
   }
 }
